# notes-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/models/: schemas.py
src/services/: ai_service.py  antinote_service.py  history_service.py  notes_service.py
src/utils/: config_manager.py
src/views/: dashboard_view.py  history_view.py  settings_view.py  theme.py
