[project]
name = "notes-analyzer"
version = "0.1.0"
description = "Desktop app to analyze daily notes with AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flet>=0.80.0",
  "groq>=0.20.0",
  "aiohttp>=3.10.11,<3.13",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.flet]
project = "notes-analyzer"
product = "Notes Analyzer"
org = "com.notesanalyzer"
